Added cyclops (sub) plugin manager.
* Invoke Makefile.cyclops to build cyclops sub plugins. They appear in `builds/intermediate/cyclops_plugins`
* Moved test buttons to canvas.
* There's only 1 plugin right now, which does nothing. The system works
* Made a slightly better dir structutre

--- a/Source/Plugins/CyclopsStimulator/plugins/Example_CL_Plugin/Makefile
+++ b/Source/Plugins/CyclopsStimulator/plugins/Example_CL_Plugin/Makefile
@@ -1,14 +1,14 @@
 
-LIBNAME := $(notdir $(CURDIR))
-OBJDIR := $(OBJDIR)/$(LIBNAME)
-TARGET := $(LIBNAME).so
+CL_PLUGIN_NAME := $(notdir $(CURDIR))
+OBJDIR := $(OBJDIR)/$(CL_PLUGIN_NAME)
+TARGET := $(CL_PLUGIN_NAME).so
 OS := $(shell uname)
 
 SRC_DIR := ${shell find ./ -type d -print}
 # SOURCE_DIRS is not "empty"
 VPATH := $(SOURCE_DIRS)
 
-SRC := $(foreach sdir,$(SRC_DIR), $(filter-out ./plugins%, $(wildcard $(sdir)/*.cpp)))
+SRC := $(foreach sdir,$(SRC_DIR), $(wildcard $(sdir)/*.cpp))
 # Don't enter plugins directory!
 OBJ := $(addprefix $(OBJDIR)/,$(notdir $(SRC:.cpp=.o)))
 
@@ -32,14 +32,18 @@ $(OUTDIR)/$(TARGET): objdir $(OBJ)
 	@$(BLDCMD)
 
 $(OBJDIR)/%.o : %.cpp
-	@echo "Compiling $<"
+	@echo "Compiling $< and saving in $@"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 	
 objdir:
+	@echo $(CXXFLAGS)
+	@echo
+	@echo $(LDFLAGS)
+	@echo
 	-@mkdir -p $(OBJDIR)
 
 clean:
-	@echo "Cleaning $(LIBNAME)"
+	@echo "Cleaning $(CL_PLUGIN_NAME)"
 	-@rm -rf $(OBJDIR)
 	-@rm -f $(OUTDIR)/$(TARGET)
 
